--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
             crossorigin="anonymous"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5qUt-375VmpGVEDPNo23W0PBBnWOx-rs&callback=initMap" async defer></script>
+    <script src="ADD your googlr map api" async defer></script>
     <script>
         function initMap() {
             // Initialize the map centered on India
